--- a/myresume/templates/base.html
+++ b/myresume/templates/base.html
@@ -38,7 +38,7 @@ https://templatemo.com/tm-578-first-portfolio
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <a href="/myresume" class="navbar-brand mx-auto mx-lg-0">{{ single_resume.name }}</a>
+                <a href="/" class="navbar-brand mx-auto mx-lg-0">{{ single_resume.name }}</a>
                 <div class="d-flex align-items-center d-lg-none">
                     <i class="navbar-icon bi-telephone-plus me-3"></i>
                     <a class="custom-btn btn btn" href="#section_5">
