--- a/myresume/templates/base.html
+++ b/myresume/templates/base.html
@@ -15,6 +15,7 @@
         <link href="{% static 'css/bootstrap-icons.css' %}" rel="stylesheet">
         <link href="{% static 'css/magnific-popup.css' %}" rel="stylesheet">
         <link href="{% static 'css/templatemo-first-portfolio-style.css' %}" rel="stylesheet">
+        <link href="{% static 'css/custom.css' %}" rel="stylesheet">
         <script src="https://kit.fontawesome.com/6f49510d9d.js" crossorigin="anonymous"></script>
 
 <!--
@@ -91,6 +92,8 @@ https://templatemo.com/tm-578-first-portfolio
             </div>
         </footer>
 
+        <div id="toast__message"></div>
+
         <!-- JAVASCRIPT FILES -->
         <script src="{% static 'js/jquery.min.js' %}"></script>
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
@@ -99,6 +102,11 @@ https://templatemo.com/tm-578-first-portfolio
         <script src="{% static 'js/jquery.magnific-popup.min.js' %}"></script>
         <script src="{% static 'js/magnific-popup-options.js' %}"></script>
         <script src="{% static 'js/custom.js' %}"></script>
-
+        <script src="{% static 'js/toast.js' %}"></script>
+        {% if request.session.message %}
+        <script>
+            showSuccessToast();
+        </script>
+        {% endif %}
     </body>
 </html>
