--- a/myresume/templates/index.html
+++ b/myresume/templates/index.html
@@ -239,35 +239,14 @@
                         </p>
                     </div>
                 </div>
-
                 <div class="col-lg-6 col-12 mt-5 mt-lg-0">
-                    <form action="#" method="get" class="custom-form contact-form" role="form">
+                    <form action="/mails/send_mail" method="post" class="custom-form contact-form" role="form">
+                        {% csrf_token %}
                         <div class="row">
-                            <div class="col-lg-6 col-md-6 col-12">
-                                <div class="form-floating">
-                                    <input type="text" name="name" id="name" class="form-control" placeholder="Name"
-                                           required="">
-                                    <label for="floatingInput">Name</label>
-                                </div>
-                            </div>
-                            <div class="col-lg-6 col-md-6 col-12">
-                                <div class="form-floating">
-                                    <input type="email" name="email" id="email" pattern="[^ @]*@[^ @]*"
-                                           class="form-control" placeholder="Email address" required="">
-                                    <label for="floatingInput">Email address</label>
-                                </div>
-                            </div>
-                            <div class="col-lg-12 col-12">
-                                <div class="form-floating">
-                                    <textarea class="form-control" id="message" name="message"
-                                              placeholder="Tell me about the project"></textarea>
-                                    <label for="floatingTextarea">Tell me about the project</label>
-                                </div>
-                            </div>
+                            {{ form }}
                             <div class="col-lg-3 col-12 ms-auto">
                                 <button type="submit" class="form-control">Send</button>
                             </div>
-
                         </div>
                     </form>
                 </div>
