--- a/myresume/templates/base.html
+++ b/myresume/templates/base.html
@@ -104,6 +104,7 @@ https://templatemo.com/tm-578-first-portfolio
         <script src="{% static 'js/custom.js' %}"></script>
         <script src="{% static 'js/toast.js' %}"></script>
         {% if request.session.message %}
+        {{ request.session.clear }}
         <script>
             showSuccessToast();
         </script>
